# HypercubeRC

./: .gitignore  CLAUDE.md  CMakeLists.txt  ChangeLog.md  ESN.cpp  ESN.h  HCNNPresets.h  IReservoir.h  LICENSE  Presets.h  README.md  Readout.cpp  Readout.h  Reservoir.cpp  Reservoir.h  ReservoirCascade.cpp  ReservoirCascade.h  ReservoirDefaults.h  SDK.md  SignalGenerators.h  TranslationLayer.cpp  TranslationLayer.h  how_to_build.md  main.cpp  tasks.md
.github/workflows/: wheels.yml
Tools/: StandaloneESNSweep.cpp
cmake/: HypercubeRCConfig.cmake.in
diagnostics/: BenchmarkSuite.h  CnnSeedSurvey.cpp  CoreSmokeTest.cpp  HCNNBenchmarkSuite.h  HCNNProfileDriver.cpp  MackeyGlass.h  MackeyGlass.md  MemoryCapacity.h  MemoryCapacityProfile.h  MemoryCapacityProfile.md  NARMA10.h  NARMA10.md  NARMA_N.h  NARMA_N.md  OptimizeHRCCNNForMG.cpp  OptimizeHRCCNNForMG.h  SeedSurvey.cpp  SeedSurvey.h  SeedSurvey.md  SignalGenerators.h  StandaloneESNSweep.cpp  StateRank.h  StateRank.md
docs/: CPP_SDK.md  Cascade.md  Comparison.md  DoesTopologyMatter.md  ESN.md  FastNarma.md  HCNNReadout.md  HCNNTuning.md  HRCCNNBaselineConfig.md  HRCCNN_LLM_Math.md  HRCCNN_LM_Text.md  MultiTimescaleReservoir.md  Python_SDK.md  README.md  Readout.md  Reservoir.md  ReservoirMemoryBottleneck.md  ScaleInvariance.md  SeedSurvey.md  TrainingModes.md  TranslationLayer.md  Tuning.md  masks.md  math_llm.md  standalone_baselines.md
examples/: BasicPrediction.cpp  BasicPrediction.md  CNNPrediction.cpp  README.md  SignalClassification.cpp  SignalClassification.md  StreamingAnomaly.cpp  StreamingAnomaly.md  potential.md
examples/HRCCNN_LLM_Math/: Config.h  Dataset.cpp  Dataset.h  FormatCheck.h  Generator.cpp  Generator.h  NumberFormat.cpp  NumberFormat.h  RunEval.cpp  RunGenerate.cpp  RunInfer.cpp  RunTrain.cpp  Serialization.cpp  Serialization.h  Verifier.cpp  Verifier.h  Vocab.cpp  Vocab.h  main.cpp
examples/HRCCNN_LM_Text/: Config.h  Corpus.cpp  Corpus.h  Dataset.cpp  Dataset.h  HRCCNN_LM_Text.md  RunEval.cpp  RunInfer.cpp  RunTrain.cpp  Serialization.cpp  Serialization.h  main.cpp
examples/LM/: Config.h  Corpus.cpp  Corpus.h  Evaluator.cpp  Evaluator.h  Generator.cpp  Generator.h  Model.cpp  Model.h  Trainer.cpp  Trainer.h  Vocabulary.cpp  Vocabulary.h  main.cpp
examples/LM_Text/: Config.h  Corpus.cpp  Corpus.h  Dataset.cpp  Dataset.h  LM_Text.md  RunEval.cpp  RunInfer.cpp  RunTrain.cpp  Serialization.cpp  Serialization.h  main.cpp
python/: .gitignore  CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
python/hypercube_rc/: __init__.py
python/tests/: test_basic.py
readout/: CNNReadout.cpp  CNNReadout.h  CNNReadout.md  HCNNPresets.h  HCNNReadout.cpp  HCNNReadout.h  HCNNReadout.md  LinearReadout.cpp  LinearReadout.h  RidgeRegression.cpp  RidgeRegression.h
tests/: CoreSmokeTest.cpp
